--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "author": "Gabriel Braga",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.5.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2"
   }
 }
